Update java and libs (#6)
* feat: add dependabot config

* feat: update java and dependencies versions

* feat: use new features from java 17 and refactoring